--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="Sum_of_Numbers.js"></script>
+    <script src="Disemvowel_Trolls.js"></script>
 </body>
 </html>
