highest and lowest

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="Disemvowel_Trolls.js"></script>
+    <script src="highest_and_lowest.js" ></script>
 </body>
 </html>
