--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="Anagram_Detection.js" ></script>
+    <script src="testing123.js" ></script>
 </body>
 </html>
