--- a/7kyu/html/index.html
+++ b/7kyu/html/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
-    <script src="testing123.js" ></script>
+    <script src="/7kyu/js/swtchItUp.js"  ></script>
+    <!-- <script src="testing123.js" ></script> -->
 </body>
 </html>
