--- a/7kyu/html/index.html
+++ b/7kyu/html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <script src="/7kyu/js/findTheCapitals.js"  ></script>
+    <script src="/7kyu/js/highestProfit.js" ></script>
     <!-- <script src="testing123.js" ></script> -->
 </body>
 </html>
