--- a/8kyu/html/8kyu.html
+++ b/8kyu/html/8kyu.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="/8kyu/js/intFromChar.js" ></script>
+    <script src="/8kyu/js/gradebook.js" ></script>
 </body>
 </html>
