unique in order

--- a/6kyu/html/index.html
+++ b/6kyu/html/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/6kyu/js/arr_diff.js"></script>
+    <script src="/6kyu/js/unique_in_order.js"></script>
 </body>
 </html>
