sum of the two smallest numbers

--- a/6kyu/html/index.html
+++ b/6kyu/html/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/6kyu/js/are_they_similar.js"></script>
+    <script src="/6kyu/js/breakCamelCase.js"></script>
 </body>
 </html>
